# autoanno

./: .gitignore  LICENSE.txt  README.md  README.rst  setup.cfg  setup.py
autoanno/: __init__.py
docs/: agenda.rst  bibliography.rst  conf.py  index.rst
docs/reference/: glossary.rst  gudhi.rst  index.rst  network.rst  nlp.rst  plotting.rst
notebooks/: data_cleaning.ipynb
requirements/: default.txt  install_order.txt
tests/: tests_basic.py
