[metadata]
name = autoanno
version = 0.0.1dev2
author = Matthew Gudorf
author_email = matthew.gudorf@gmail.com
description = Annotation of big data via AutoML and Topological Data Analysis
long_description = file: README.rst
long_description_content_type = text/x-rst
url = "https://autoanno.readthedocs.io/en/latest/index.html"
project_urls={
        "documentation": "https://autoanno.readthedocs.io/en/latest/index.html",
        "source": "https://github.com/mgudorf/autoanno/",
        "tutorials": "https://github.com/mgudorf/autoanno/tree/main/notebooks",
    },
classifiers =
    Development Status :: 1 - Planning,
    Intended Audience :: Information Technology,
    Topic :: Scientific/Engineering :: Artificial Intelligence,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3 :: Only,
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows :: Windows 10
[options]
packages=find:
install_requires = 
    matplotlib>=3.1.3
    numpy>=1.18.1
    scipy>=1.4.1
    h5py>=2.10.0
    pyqt5>=5.15.4
    gudhi>=3.3.0
    pot>=0.7.0
    networkx>=2.5
    gensim>=3.8.3
    plotly>=4.14.3
    torch>=1.6.0
    ipython>=7.21.0
    ipykernel>=5.1.4
    jupyterlab>=1.2.6
    python_requires >=3.7
tests_require =
    pytest>=5.3.5
setup_requires =
    setuptools>=40.6
[options.packages.find]
where=
    autoanno
exclude=
    data
    notebooks
    docs
    tests
    scripts
    requirements
[aliases]
test=pytest
[options.extras_require]
docs =
    ipython
    sphinx>=3.5.2
    sphinxcontrib-log-cabinet>=1.0.1
    sphinx-issues>=1.2.0
    sphinx_rtd_theme>=0.5.1
    sphinx-gallery>=0.8.2
    numpydoc>=1.1
    pillow>=8.0
    nb2plots>=0.6
    texext>=0.6.6
test =
    pytest>=5.3.5